k8s/huddle-backend.yml
# Huddle Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huddle-backend-deployment
  namespace: founderhq-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: founderhq-huddle-backend
  template:
    metadata:
      labels:
        app: founderhq-huddle-backend
    spec:
      containers:
        - name: huddle-backend-container
          image: gourav1310/founderhq_huddle_backend:c4546265d2526813d352e6f063876d2e64210a9c
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: huddle-backend-logs
              mountPath: /logs
      volumes:
        - name: huddle-backend-logs
          persistentVolumeClaim:
            claimName: huddle-backend-pvc

---
# Huddle Backend Service
apiVersion: v1
kind: Service
metadata:
  name: huddle-backend-service
  namespace: founderhq-ns
spec:
  type: ClusterIP
  selector:
    app: founderhq-huddle-backend
  ports:
    - port: 5001
      targetPort: 5001
