k8s/mogodb.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: founderhq_ns

spec:
  serviceName: mongodb
  replicas: 2

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        storageClassName: ""
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: founderhq_ns

spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
