k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: founderhq-ingress
  namespace: founderhq-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /rooms
            pathType: Prefix
            backend:
              service:
                name: huddle-backend-service
                port:
                  number: 5001
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: huddle-backend-service
                port:
                  number: 5001
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: huddle-backend-service
                port:
                  number: 5001
